[package]
name = "cyclors"
version = "0.3.6"
authors = ["kydos <angelo@icorsaro.net>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["DDS", "CycloneDDS"]
repository = "https://github.com/ZettaScaleLabs/cyclors"
documentation = "https://docs.rs/cyclors"
description = """
Low-level API for the native CycloneDDS bindings (libddsc-sys).
"""
categories = ["api-bindings"]
edition = "2021"

[lib]
name = "cyclors"

[dependencies]
bincode = "1.3.3"
derivative = "2.2.0"
libc = "0.2.67"
log = "0.4.17"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"

[features]
iceoryx = []
prefix_symbols = []
